--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -71,36 +71,41 @@ https://drive.google.com/file/d/1H2977Yp8dQJsRzpoVNH4CXOeSmnu756c/view?usp=shari
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-      <div class="numbertext">1 / 6</div>
+      <div class="numbertext">1 / 7</div>
       <img src="/static/project_game.jpeg" >
       <div class="text" style="width: 25%;">Game Explore</div>
     </div>
   
     <div class="mySlides fade">
-      <div class="numbertext">2 / 6</div>
+      <div class="numbertext">2 / 7</div>
       <img src="/static/project_chatting.png" >
       <div class="text"style="width: 25%;">Web chatting</div>
     </div>
   
     <div class="mySlides fade">
-      <div class="numbertext">3 / 6</div>
+      <div class="numbertext">3 / 7</div>
       <img src="/static/project_blogging.png" >
       <div class="text"style="width: 25%;">Blogging App</div>
     </div>
     <div class="mySlides fade">
-        <div class="numbertext">4 / 6</div>
+        <div class="numbertext">4 / 7</div>
         <img src="/static/project_portfolio.jpg" >
         <div class="text" style="width: 25%;">Portfolio</div>
     </div>
     <div class="mySlides fade">
-        <div class="numbertext">5 / 6</div>
+        <div class="numbertext">5 / 7</div>
         <img src="/static/project_toDoList.jpg" >
         <div class="text"style="width: 25%;">To do list</div>
     </div>
     <div class="mySlides fade">
-        <div class="numbertext">6 / 6</div>
+        <div class="numbertext">6 / 7</div>
         <img src="/static/project_travel.jpg" >
         <div class="text"style="width: 25%;">Travel Website</div>
+    </div>
+    <div class="mySlides fade">
+        <div class="numbertext">7 / 7</div>
+        <img src="/static/project_weather.jpg" >
+        <div class="text"style="width: 25%;">Weather Website</div>
     </div>
   
     <!-- Next and previous buttons -->
