--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -35,7 +35,7 @@
     <div class="social-media">
         <a href="https://github.com/Shradhesh71"class="fa fa-github fa-lg" title="Github"></a>
         <a href="https://www.instagram.com/shradesh_jain71/" class="fa fa-instagram fa-lg" title="Instagram"></a>
-        <a href="#"class="fa fa-facebook fa-lg"></a>
+        <a href="https://auth.geeksforgeeks.org/user/shradesh1r1n" ><img src="/static/icons8-geeksforgeeks-48 (1).png"></a>
         <a href="https://www.linkedin.com/in/shradesh-jodawat-147730265/"class="fa fa-linkedin fa-lg" title="LinkedIn"></a>
     </div>
     <a href="#" class="btn">Download CV</a>
@@ -73,7 +73,7 @@ https://drive.google.com/file/d/1H2977Yp8dQJsRzpoVNH4CXOeSmnu756c/view?usp=shari
     <div class="mySlides fade">
       <div class="numbertext">1 / 7</div>
       <img src="/static/project_game.jpeg" >
-      <div class="text" style="width: 25%;">Game Explore</div>
+      <div class="text" style="width: 25%;"><a href="https://github.com/Shradhesh71/Game_Xplore/tree/master">Game Explore</a></div>
     </div>
   
     <div class="mySlides fade">
@@ -90,12 +90,12 @@ https://drive.google.com/file/d/1H2977Yp8dQJsRzpoVNH4CXOeSmnu756c/view?usp=shari
     <div class="mySlides fade">
         <div class="numbertext">4 / 7</div>
         <img src="/static/project_portfolio.jpg" >
-        <div class="text" style="width: 25%;">Portfolio</div>
+        <div class="text" style="width: 25%;"><a href="https://github.com/Shradhesh71/Portfolio">Portfolio</a></div>
     </div>
     <div class="mySlides fade">
         <div class="numbertext">5 / 7</div>
         <img src="/static/project_toDoList.jpg" >
-        <div class="text"style="width: 25%;">To do list</div>
+        <div class="text"style="width: 25%;"><a href="https://github.com/Shradhesh71/To-do-list">To do list</a></div>
     </div>
     <div class="mySlides fade">
         <div class="numbertext">6 / 7</div>
@@ -105,7 +105,7 @@ https://drive.google.com/file/d/1H2977Yp8dQJsRzpoVNH4CXOeSmnu756c/view?usp=shari
     <div class="mySlides fade">
         <div class="numbertext">7 / 7</div>
         <img src="/static/project_weather.jpg" >
-        <div class="text"style="width: 25%;">Weather Website</div>
+        <div class="text"style="width: 25%;"><a href="https://github.com/Shradhesh71/Weather/tree/master">Weather Website</a></div>
     </div>
   
     <!-- Next and previous buttons -->
