--- a/veiws/style.css
+++ b/veiws/style.css
@@ -120,6 +120,14 @@ span{
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
 }
+.social-media a img{
+    width: 3rem;
+    height: 3rem;
+}
+.social-media a:nth-child(3){
+    margin: 4rem 1.5rem 3rem 0;
+    margin-top: 20px;
+}
 .social-media a:hover {
     font-family: "Comfortaa";
     background: var(--main-color);
