--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -161,8 +161,49 @@ https://drive.google.com/file/d/1H2977Yp8dQJsRzpoVNH4CXOeSmnu756c/view?usp=shari
       <br><br>
     <a href="https://www.linkedin.com/in/shradesh-jodawat-147730265/"><button class="bn30">More Certificate</button></a>
 </section>
+<section>
+    <!-- testimonial design -->
+    <div class="testimonial-container">
+        <h2 class="heading">Valuable <span>Testimonial</span></h2>
 
-<section class="contact" id="contact">
+        <div class="testimonial-wrapper">
+            <div class="testimonial-box mySwiper">
+                <div class="testimonial-content swiper-wrapper">
+                    <div class="testimonial-slide swiper-slide">
+                        <img src="/static/project_game.jpeg" alt="">
+                        <h3>Jackson Levi</h3>
+                        <p>Working with Shradesh was an absolute game-changer for our project! Their creativity knows no bounds,
+                             and they have this amazing ability to turn ideas into reality. The dedication and passion they bring to 
+                             the table are truly commendable. Our collaboration was not just productive but also a lot of fun. If you're 
+                             looking for someone who can effortlessly blend professionalism with a friendly approach, 
+                             Shradesh is your go-to person. Trust me, your project is in good hands!</p>
+                    </div>
+                    <div class="testimonial-slide swiper-slide">
+                        <img src="/static/project_weather.jpg" alt="">
+                        <h3>Flora Ocean</h3>
+                        <p>Shradesh possesses a rare combination of creativity and strategic thinking. They not only 
+                            understood our needs but also exceeded our expectations in delivering a solution 
+                            that perfectly aligned with our goals.</p>
+                    </div>
+                    <div class="testimonial-slide swiper-slide">
+                        <img src="/static/project_travel.jpg" alt="">
+                        <h3>Julian Grayson</h3>
+                        <p>Working with Shradesh was an absolute pleasure! Their dedication to delivering high-quality 
+                            results is unmatched. I was impressed by their creativity, attention to detail, and ability to meet 
+                            deadlines. Shradesh is a true professional who goes above and beyond to exceed expectations. 
+                            I highly recommend their services and look forward to collaborating again in the future.</p>
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="contact" id="contact" style="background-color: #323946;">
     <h2 class="heading">Contact <span>Me!</span></h2>
     <form action="/" method="post" id="form-mainP">
         <div class="input-box">
